---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/unknown_module_field_in_expression"
---
error: Unknown module value
  ┌─ src/two.gleam:7:7
  │
7 │   one.B
  │       ^ Did you mean `A`?

The module `one` does not have a `B` value.
